<resources>
    <string name="app_name">JobSearch</string>
    <!-- activity_start -->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <!-- activity_signup -->
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="email_address">Email Address</string>
</resources>
