<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.comp680.jobsearch.StartActivity">

        <TextView
            android:id="@+id/usernameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/username" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/usernameTxt"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/passwordTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/user_name"
            android:text="@string/password" />

        <EditText
            android:id="@+id/user_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/passwordTxt"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/passwordConTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/user_password"
            android:text="@string/password_confirmation" />

        <EditText
            android:id="@+id/user_password_con"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/passwordConTxt"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/emailTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/user_password_con"
            android:text="@string/email_address" />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/sign_up"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/emailTxt"
            android:layout_marginBottom="45dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/sign_up"
            style="@style/StartActivityButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="23dp"
            android:text="@string/sign_up"
            android:textAllCaps="false" />

    </RelativeLayout>
</ScrollView>